Added the maxPermSize jvm arg the various startup methods since OFBiz now seems to require more than the default 64m.  Also removed startofbizNoLog.bat since it seems somewhat superfluous, instead made startofbiz.bat log to the console by default and added a comment about how to change it if desired.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@818321 13f79535-47bb-0310-9956-ffa450edef68